--- a/LetsEat.html
+++ b/LetsEat.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <link rel= "stylesheet" href="LetsEat.css">
 <script src= "LetsEat.js"> </script>
-<header><h1><center> Let's Eat! </header></h1></center>
-<h2> <center>You Choose? No, We'll Choose. </h2> </center>
+<header><h1><center> <b>Let's Eat!</b> </header></h1></center>
+<h2> <center><b>You Choose? No, We'll Choose. </b></h2> </center>
 <p><center>
-         <label>Tell Us Your State/District:</label>
+         <label><b>Tell Us Your State/District:</b></label>
          <input type = "text"
                 id = "myText"
                 value = "text here" />
@@ -25,23 +25,36 @@ body {
 </style>
 </head>
 <body>
+  <div class="dropdown">
+    <select name="price" id="price">
+    <div class="dropdown-content">
+      <option value= "$"> $ </option>
+      <option value= "$$"> $$ </option>
+      <option value= "$$$"> $$$ </option>
+    </div>
+  </div>
+      <p><b>How much are you willing to spend?</b></p>
 
-      <p>How much are you willing to spend?</p>
-        <select name="price" id="price">
-          <option value= "$"> $ </option>
-          <option value= "$$"> $$ </option>
-          <option value= "$$$"> $$$ </option>
+
+
+
         </select>
         <button onClick = "innerHTML = document.getElementById('price').value"> Select </button>
 
-      <p>Specify what kind of food you are in the mood for.</p>
+      <p><b>Specify what kind of food you are in the mood for.</b></p>
         <select name="food" id ="food">
-          <option value="Italian">Italian </option>
-          <option value="Latin/Hispanic">Latin/Hispanic</option>
-          <option value="American">American</option>
-          <option value="Asian">Asian</option>
-          <option value= "French">French</option>
-          <option value= "Random"> Random Choice</option>
+          <div class="dropdown">
+            <button class="dropbtn">Dropdown</button>
+            <div class="dropdown-content">
+              <option value="Italian">Italian </option>
+              <option value="Latin/Hispanic">Latin/Hispanic</option>
+              <option value="American">American</option>
+              <option value="Asian">Asian</option>
+              <option value= "French">French</option>
+              <option value= "Random"> Random Choice</option>
+            </div>
+          </div>
+
         </select>
         <button onClick = "innerHTML = document.getElementById('food').value"> Select </button>
 
