Capitalized Final.js

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <html lang="en">
 <link rel= "stylesheet" href="LetsEat.css">
-<script src= "final.js"> </script>
+<script src= "Final.js"> </script>
 <header><h1><center> <b>Let's Eat!</b> </header></h1></center>
 <h2> <center><b>You Choose? No, We Choose. </b></h2> </center>
 <p><center>
